More options for store locations. (#294)
* More options for store locations.

Watermark: Location watermark threshold in percents of volume size.
MaxTrashMilliseconds: Max TTL of trash in milliseconds.

* Change description for Watermark field.

* More proper watermarks calculations.

* Regenerated templates

--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -793,6 +793,19 @@ spec:
                           description: LocationType string describes types of disk
                             locations for YT components.
                           type: string
+                        lowWatermark:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Limit above which the volume is considered
+                            to be non-full.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
+                        maxTrashMilliseconds:
+                          description: Max TTL of trash in milliseconds.
+                          format: int64
+                          minimum: 60000
+                          type: integer
                         medium:
                           default: default
                           type: string
@@ -3173,6 +3186,19 @@ spec:
                             description: LocationType string describes types of disk
                               locations for YT components.
                             type: string
+                          lowWatermark:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: Limit above which the volume is considered
+                              to be non-full.
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
+                          maxTrashMilliseconds:
+                            description: Max TTL of trash in milliseconds.
+                            format: int64
+                            minimum: 60000
+                            type: integer
                           medium:
                             default: default
                             type: string
@@ -5565,6 +5591,19 @@ spec:
                           description: LocationType string describes types of disk
                             locations for YT components.
                           type: string
+                        lowWatermark:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Limit above which the volume is considered
+                            to be non-full.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
+                        maxTrashMilliseconds:
+                          description: Max TTL of trash in milliseconds.
+                          format: int64
+                          minimum: 60000
+                          type: integer
                         medium:
                           default: default
                           type: string
@@ -8131,6 +8170,19 @@ spec:
                             description: LocationType string describes types of disk
                               locations for YT components.
                             type: string
+                          lowWatermark:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: Limit above which the volume is considered
+                              to be non-full.
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
+                          maxTrashMilliseconds:
+                            description: Max TTL of trash in milliseconds.
+                            format: int64
+                            minimum: 60000
+                            type: integer
                           medium:
                             default: default
                             type: string
@@ -10554,6 +10606,19 @@ spec:
                             description: LocationType string describes types of disk
                               locations for YT components.
                             type: string
+                          lowWatermark:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: Limit above which the volume is considered
+                              to be non-full.
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
+                          maxTrashMilliseconds:
+                            description: Max TTL of trash in milliseconds.
+                            format: int64
+                            minimum: 60000
+                            type: integer
                           medium:
                             default: default
                             type: string
@@ -12989,6 +13054,19 @@ spec:
                           description: LocationType string describes types of disk
                             locations for YT components.
                           type: string
+                        lowWatermark:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Limit above which the volume is considered
+                            to be non-full.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
+                        maxTrashMilliseconds:
+                          description: Max TTL of trash in milliseconds.
+                          format: int64
+                          minimum: 60000
+                          type: integer
                         medium:
                           default: default
                           type: string
@@ -15417,6 +15495,19 @@ spec:
                           description: LocationType string describes types of disk
                             locations for YT components.
                           type: string
+                        lowWatermark:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Limit above which the volume is considered
+                            to be non-full.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
+                        maxTrashMilliseconds:
+                          description: Max TTL of trash in milliseconds.
+                          format: int64
+                          minimum: 60000
+                          type: integer
                         medium:
                           default: default
                           type: string
@@ -17799,6 +17890,19 @@ spec:
                           description: LocationType string describes types of disk
                             locations for YT components.
                           type: string
+                        lowWatermark:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Limit above which the volume is considered
+                            to be non-full.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
+                        maxTrashMilliseconds:
+                          description: Max TTL of trash in milliseconds.
+                          format: int64
+                          minimum: 60000
+                          type: integer
                         medium:
                           default: default
                           type: string
@@ -20170,6 +20274,19 @@ spec:
                           description: LocationType string describes types of disk
                             locations for YT components.
                           type: string
+                        lowWatermark:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Limit above which the volume is considered
+                            to be non-full.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
+                        maxTrashMilliseconds:
+                          description: Max TTL of trash in milliseconds.
+                          format: int64
+                          minimum: 60000
+                          type: integer
                         medium:
                           default: default
                           type: string
@@ -22548,6 +22665,19 @@ spec:
                             description: LocationType string describes types of disk
                               locations for YT components.
                             type: string
+                          lowWatermark:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: Limit above which the volume is considered
+                              to be non-full.
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
+                          maxTrashMilliseconds:
+                            description: Max TTL of trash in milliseconds.
+                            format: int64
+                            minimum: 60000
+                            type: integer
                           medium:
                             default: default
                             type: string
@@ -24962,6 +25092,19 @@ spec:
                           description: LocationType string describes types of disk
                             locations for YT components.
                           type: string
+                        lowWatermark:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Limit above which the volume is considered
+                            to be non-full.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
+                        maxTrashMilliseconds:
+                          description: Max TTL of trash in milliseconds.
+                          format: int64
+                          minimum: 60000
+                          type: integer
                         medium:
                           default: default
                           type: string
@@ -27348,6 +27491,19 @@ spec:
                             description: LocationType string describes types of disk
                               locations for YT components.
                             type: string
+                          lowWatermark:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: Limit above which the volume is considered
+                              to be non-full.
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
+                          maxTrashMilliseconds:
+                            description: Max TTL of trash in milliseconds.
+                            format: int64
+                            minimum: 60000
+                            type: integer
                           medium:
                             default: default
                             type: string
@@ -29799,6 +29955,19 @@ spec:
                             description: LocationType string describes types of disk
                               locations for YT components.
                             type: string
+                          lowWatermark:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: Limit above which the volume is considered
+                              to be non-full.
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
+                          maxTrashMilliseconds:
+                            description: Max TTL of trash in milliseconds.
+                            format: int64
+                            minimum: 60000
+                            type: integer
                           medium:
                             default: default
                             type: string
@@ -32197,6 +32366,19 @@ spec:
                             description: LocationType string describes types of disk
                               locations for YT components.
                             type: string
+                          lowWatermark:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: Limit above which the volume is considered
+                              to be non-full.
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
+                          maxTrashMilliseconds:
+                            description: Max TTL of trash in milliseconds.
+                            format: int64
+                            minimum: 60000
+                            type: integer
                           medium:
                             default: default
                             type: string
@@ -34797,6 +34979,19 @@ spec:
                           description: LocationType string describes types of disk
                             locations for YT components.
                           type: string
+                        lowWatermark:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Limit above which the volume is considered
+                            to be non-full.
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
+                        maxTrashMilliseconds:
+                          description: Max TTL of trash in milliseconds.
+                          format: int64
+                          minimum: 60000
+                          type: integer
                         medium:
                           default: default
                           type: string
