Add per-component terminationGracePeriodSeconds

--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -1057,6 +1057,11 @@ spec:
                           type: boolean
                       type: object
                     type: array
+                  terminationGracePeriodSeconds:
+                    description: Optional duration in seconds the pod needs to terminate
+                      gracefully.
+                    format: int64
+                    type: integer
                   tolerations:
                     items:
                       description: |-
@@ -3462,6 +3467,11 @@ spec:
                       items:
                         type: string
                       type: array
+                    terminationGracePeriodSeconds:
+                      description: Optional duration in seconds the pod needs to terminate
+                        gracefully.
+                      format: int64
+                      type: integer
                     tolerations:
                       items:
                         description: |-
@@ -5855,6 +5865,11 @@ spec:
                           type: boolean
                       type: object
                     type: array
+                  terminationGracePeriodSeconds:
+                    description: Optional duration in seconds the pod needs to terminate
+                      gracefully.
+                    format: int64
+                    type: integer
                   tolerations:
                     items:
                       description: |-
@@ -8454,6 +8469,11 @@ spec:
                       items:
                         type: string
                       type: array
+                    terminationGracePeriodSeconds:
+                      description: Optional duration in seconds the pod needs to terminate
+                        gracefully.
+                      format: int64
+                      type: integer
                     tolerations:
                       items:
                         description: |-
@@ -10879,6 +10899,11 @@ spec:
                             type: boolean
                         type: object
                       type: array
+                    terminationGracePeriodSeconds:
+                      description: Optional duration in seconds the pod needs to terminate
+                        gracefully.
+                      format: int64
+                      type: integer
                     tolerations:
                       items:
                         description: |-
@@ -13318,6 +13343,11 @@ spec:
                           type: boolean
                       type: object
                     type: array
+                  terminationGracePeriodSeconds:
+                    description: Optional duration in seconds the pod needs to terminate
+                      gracefully.
+                    format: int64
+                    type: integer
                   tolerations:
                     items:
                       description: |-
@@ -15768,6 +15798,11 @@ spec:
                           type: boolean
                       type: object
                     type: array
+                  terminationGracePeriodSeconds:
+                    description: Optional duration in seconds the pod needs to terminate
+                      gracefully.
+                    format: int64
+                    type: integer
                   tolerations:
                     items:
                       description: |-
@@ -18154,6 +18189,11 @@ spec:
                           type: boolean
                       type: object
                     type: array
+                  terminationGracePeriodSeconds:
+                    description: Optional duration in seconds the pod needs to terminate
+                      gracefully.
+                    format: int64
+                    type: integer
                   tolerations:
                     items:
                       description: |-
@@ -20538,6 +20578,11 @@ spec:
                           type: boolean
                       type: object
                     type: array
+                  terminationGracePeriodSeconds:
+                    description: Optional duration in seconds the pod needs to terminate
+                      gracefully.
+                    format: int64
+                    type: integer
                   tolerations:
                     items:
                       description: |-
@@ -22940,6 +22985,11 @@ spec:
                             type: boolean
                         type: object
                       type: array
+                    terminationGracePeriodSeconds:
+                      description: Optional duration in seconds the pod needs to terminate
+                        gracefully.
+                      format: int64
+                      type: integer
                     tolerations:
                       items:
                         description: |-
@@ -25356,6 +25406,11 @@ spec:
                           type: boolean
                       type: object
                     type: array
+                  terminationGracePeriodSeconds:
+                    description: Optional duration in seconds the pod needs to terminate
+                      gracefully.
+                    format: int64
+                    type: integer
                   tolerations:
                     items:
                       description: |-
@@ -27764,6 +27819,11 @@ spec:
                             type: boolean
                         type: object
                       type: array
+                    terminationGracePeriodSeconds:
+                      description: Optional duration in seconds the pod needs to terminate
+                        gracefully.
+                      format: int64
+                      type: integer
                     tolerations:
                       items:
                         description: |-
@@ -30231,6 +30291,11 @@ spec:
                       items:
                         type: string
                       type: array
+                    terminationGracePeriodSeconds:
+                      description: Optional duration in seconds the pod needs to terminate
+                        gracefully.
+                      format: int64
+                      type: integer
                     tolerations:
                       items:
                         description: |-
@@ -32647,6 +32712,11 @@ spec:
                             type: boolean
                         type: object
                       type: array
+                    terminationGracePeriodSeconds:
+                      description: Optional duration in seconds the pod needs to terminate
+                        gracefully.
+                      format: int64
+                      type: integer
                     tolerations:
                       items:
                         description: |-
@@ -35247,6 +35317,11 @@ spec:
                           type: boolean
                       type: object
                     type: array
+                  terminationGracePeriodSeconds:
+                    description: Optional duration in seconds the pod needs to terminate
+                      gracefully.
+                    format: int64
+                    type: integer
                   tolerations:
                     items:
                       description: |-
