--- a/config/crd/bases/cluster.ytsaurus.tech_remoteexecnodes.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_remoteexecnodes.yaml
@@ -1196,6 +1196,11 @@ spec:
                 items:
                   type: string
                 type: array
+              terminationGracePeriodSeconds:
+                description: Optional duration in seconds the pod needs to terminate
+                  gracefully.
+                format: int64
+                type: integer
               tolerations:
                 items:
                   description: |-
