--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -34220,6 +34220,10 @@ spec:
                   environment:
                     default: testing
                     type: string
+                  externalProxy:
+                    description: 'If defined it will be used for direct heavy url/commands
+                      like: read_table, write'
+                    type: string
                   extraEnvVariables:
                     items:
                       description: EnvVar represents an environment variable present
@@ -34333,6 +34337,8 @@ spec:
                     format: int32
                     type: integer
                   odinBaseUrl:
+                    description: Odin is a service for monitoring the availability
+                      of YTsaurus clusters.
                     type: string
                   resources:
                     description: ResourceRequirements describes the compute resource
