--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -34559,6 +34559,10 @@ spec:
                           resources required.
                         type: object
                     type: object
+                  secure:
+                    default: false
+                    description: Use secure connection to the cluster's http-proxies.
+                    type: boolean
                   serviceType:
                     default: NodePort
                     description: Service Type string describes ingress methods for
@@ -34568,7 +34572,7 @@ spec:
                     default: lavander
                     type: string
                   useInsecureCookies:
-                    default: true
+                    description: If defined allows insecure (over http) authentication.
                     type: boolean
                 type: object
               uiImage:
