manual add 2 new field for dns

--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -33443,6 +33443,12 @@ spec:
               useIpv6:
                 default: false
                 type: boolean
+              keepSocket:
+                default: true
+                type: boolean
+              forceTcp:
+                default: true
+                type: boolean
               usePorto:
                 default: false
                 type: boolean
