--- a/ytop-chart/templates/ytsaurus-crd.yaml
+++ b/ytop-chart/templates/ytsaurus-crd.yaml
@@ -33230,6 +33230,12 @@ spec:
               useIpv6:
                 default: false
                 type: boolean
+              keepSocket:
+                default: true
+                type: boolean
+              forceTcp:
+                default: true
+                type: boolean
               usePorto:
                 default: false
                 type: boolean
