autochanges after "make manifests"

--- a/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_ytsaurus.yaml
@@ -9681,6 +9681,9 @@ spec:
                 additionalProperties:
                   type: string
                 type: object
+              forceTcp:
+                default: false
+                type: boolean
               hostNetwork:
                 default: false
                 type: boolean
@@ -12074,6 +12077,9 @@ spec:
               jobImage:
                 description: Default docker image for user jobs.
                 type: string
+              keepSocket:
+                default: true
+                type: boolean
               masterCaches:
                 properties:
                   affinity:
@@ -33442,12 +33448,6 @@ spec:
                 type: boolean
               useIpv6:
                 default: false
-                type: boolean
-              keepSocket:
-                default: true
-                type: boolean
-              forceTcp:
-                default: true
                 type: boolean
               usePorto:
                 default: false
