--- a/config/crd/bases/cluster.ytsaurus.tech_remoteexecnodes.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_remoteexecnodes.yaml
@@ -670,6 +670,9 @@ spec:
                 additionalProperties:
                   type: string
                 type: object
+              forceTcp:
+                default: false
+                type: boolean
               hostNetwork:
                 default: false
                 type: boolean
@@ -849,6 +852,9 @@ spec:
                       resources required.
                     type: object
                 type: object
+              keepSocket:
+                default: true
+                type: boolean
               locations:
                 items:
                   properties:
