fix default forceTcp in crd

--- a/ytop-chart/templates/ytsaurus-crd.yaml
+++ b/ytop-chart/templates/ytsaurus-crd.yaml
@@ -33234,7 +33234,7 @@ spec:
                 default: true
                 type: boolean
               forceTcp:
-                default: true
+                default: false
                 type: boolean
               usePorto:
                 default: false
