fixes (naming, omitempty, move to separate canon test)

--- a/config/crd/bases/cluster.ytsaurus.tech_remoteexecnodes.yaml
+++ b/config/crd/bases/cluster.ytsaurus.tech_remoteexecnodes.yaml
@@ -689,7 +689,7 @@ spec:
                 additionalProperties:
                   type: string
                 type: object
-              forceTcp:
+              forceTCP:
                 default: false
                 type: boolean
               hostNetwork:
