--- a/ytop-chart/templates/crds/remoteexecnodes.cluster.ytsaurus.tech.yaml
+++ b/ytop-chart/templates/crds/remoteexecnodes.cluster.ytsaurus.tech.yaml
@@ -700,7 +700,7 @@ spec:
                 additionalProperties:
                   type: string
                 type: object
-              forceTcp:
+              forceTCP:
                 default: false
                 type: boolean
               hostNetwork:
