--- a/ytop-chart/templates/crds/ytsaurus.cluster.ytsaurus.tech.yaml
+++ b/ytop-chart/templates/crds/ytsaurus.cluster.ytsaurus.tech.yaml
@@ -10035,7 +10035,7 @@ spec:
                 additionalProperties:
                   type: string
                 type: object
-              forceTcp:
+              forceTCP:
                 default: false
                 type: boolean
               hostNetwork:
